--- a/Project2/proj_SO24-25-p2 (1)/src/server/Makefile
+++ b/Project2/proj_SO24-25-p2 (1)/src/server/Makefile
@@ -3,8 +3,8 @@ CC = gcc
 # Para mais informações sobre as flags de warning, consulte a informação adicional no lab_ferramentas
 CFLAGS = -g -std=c17 -D_POSIX_C_SOURCE=200809L \
 		 -Wall -Werror -Wextra \
-		 -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-enum -Wundef -Wunreachable-code -Wunused -pthread \
-		 # -fsanitize=undefined -fsanitize=thread
+		 -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-enum -Wundef -Wunreachable-code -Wunused \
+		 
 
 ifneq ($(shell uname -s),Darwin) # if not MacOS
 	CFLAGS += -fmax-errors=5
@@ -12,8 +12,8 @@ endif
 
 all: kvs
 
-kvs: main.c constants.h operations.o parser.o kvs.o
-	$(CC) $(CFLAGS) $(SLEEP) -o kvs main.c operations.o parser.o kvs.o
+kvs: main.c constants.h operations.o parser.o kvs.o io.o
+	$(CC) $(CFLAGS) $(SLEEP) -o kvs main.c operations.o parser.o kvs.o io.o
 
 %.o: %.c %.h
 	$(CC) $(CFLAGS) -c ${@:.o=.c}
@@ -22,7 +22,7 @@ run: kvs
 	@./kvs
 
 clean:
-	rm -f *.o kvs
+	rm -f *.o kvs jobs/*.out jobs/*.bck
 
 format:
 	@which clang-format >/dev/null 2>&1 || echo "Please install clang-format to run this command"
